custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@import "import";

/* Element style tweaks */
h1 {
  margin-bottom: 2rem;
}
figcaption {
  margin-bottom: 1em;
}

a:not(.btn):not(.button):not(.cd-top):not(.nav-link):focus,
a:not(.btn):not(.button):not(.cd-top):not(.nav-link):hover,
a:not(.btn):not(.button):not(.cd-top):not(.nav-link):active {
  border-bottom-style: none;
  text-decoration: underline;
}

.pagination a:focus,
.pagination a:hover,
.pagination a:active {
  border-bottom-style: solid;
  text-decoration: none;
}
ins {
  color: $text-muted;
  text-decoration: none;
}

/* Class/ID style tweaks */
.help-block {
  font-size: .9em;
}
.title-details figure {
  float: right;
  margin-left: 1em;
}
.tabledrag-handle:hover {
  border: none;
}
.table {
  margin-bottom: initial;
}
.panel-body {
  border-top: none;
  padding: 15px;
}
.panel-default > .panel-heading {
  background: #dedede;
  color: #333;
}
.panel-default > .panel-heading a {
  color: #333;
}

.panel-heading a {
  font-weight: bold;
}

.description {
  color: $text-muted;
}
dl .inline-list {
  display: inline;
  padding-left: 0;
}
.inline-list li {
  display: inline;
}

// Separate inline lists like: one, two, three and four.
.inline-list li:nth-child(n+2)::before {
  content: ", ";
}
.inline-list li:last-child::before {
  content: '';
}
.inline-list li:nth-last-child(2)::after {
  content: " and ";
}

.main-container {
  margin-top: 1em;
  padding-left: 2px;
  padding-right: 2px;
}
.publication h2 {
  color: #aa0404;
  font-weight: bold;
  margin-top: 0;
}
.publication figure {
  margin-bottom: 1em;
}
.publication .panel-title a {
  display: block;
}
.publication .panel-body {
  padding-bottom: 0;
}
.publication .panel-body dl:last-child {
  margin-bottom: 0;
}

/* Chosen overrides */
select[multiple="multiple"] + .form-control {
  border: none;
  padding: 0;
  width: 98%!important;
}
.chosen-container-multi .chosen-choices li.search-choice {
  margin-top: 6px;
}

// Elements.
dd {
  margin-bottom: .75em;
}
// Clear separation of multi-line multiple value list items.
dd li {
  line-height: 1.2em;
  margin-bottom: .3em;
}

p {
  margin-bottom: 1em;
}
.digital-serial-page-meta dt,
.digital-serial-page-meta dd {
  border-bottom: 1px solid #ddd;
}
.digital-serial-page-meta dt,
.digital-serial-page-meta dd {
  float: left;
  margin: 0;
  padding: .25em .5%;
  vertical-align: top;
}
.digital-serial-page-meta dt {
  width: 40%;
}
.digital-serial-page-meta dd {
  width: 60%;
}



/* Browse Issues */
.views-infinite-scroll-content-wrapper > div:not(:first-child),
.browse-issues .view-content > div:not(:first-child) {
  margin: 2rem 0;
}

.image-link-shadow a img {
  transition: box-shadow .25s ease-out;
}
.image-link-shadow a:not(.button):focus img,
.image-link-shadow a:not(.button):hover img {
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, .25);
}

/* Digital Issue Browse pager */
nav[role="navigation"]{
  .pager {
    margin-left: auto;
    margin-right: auto;

    .next,
    .previous {
      display: inline-block;

      a {
        &:focus,
        &:hover {
          border-bottom-style: solid;
          text-decoration: none;
        }
      }
    }
  }
}

/* High resolution Digital Page pager */
.pager a.btn {
  margin: auto .5em;
}

/* Fix overrides.min.css & unb-lib.css conflict */
.icon-unb {
  margin-top: 0;
}
a.disabled {
  color: $text-muted;
}

.select-wrapper select {
  line-height: normal;
  height: inherit;
}
.panel-default > .panel-heading {
  color: $unb-lib-panel-heading;
}

.panel-heading a,
.panel-heading a:focus,
.panel-heading a:hover,
.panel-title:hover:focus {
  background: none;
  color: $unb-lib-panel-heading;
  outline: none;
  padding-right: 0;
}

.form-item {
  transition: all linear 0.4s;
}

a.btn-add {
  color: #333;
  background-color: #fff;
  border-color: #ccc;
  margin-bottom: 1.5em;
}
a.btn-add:hover,
a.btn-add:focus,
a.btn-add:active {
  color: #333;
  background-color: #e6e6e6;
  border: 1px solid #adadad;
  text-decoration: none;
}

.messages--info {
  color: #325e1c;
  border-color: #c9e1bd #c9e1bd #c9e1bd transparent;
  box-shadow: -8px 0 0 #333;
}

.table > tbody > tr > td.field-multiple-drag {
  vertical-align: middle;
  width: 40px;
}
.tabledrag-handle {
  float: none;
}

// Broad title history.
.title-details .file-icon {
  display: none;
}
.title-details .file,
.no-borders .file-link {
  font-size: inherit;
  width: auto;
}
.title-details .file-size {
  color: $text-muted;
  padding-left: .5em;
  text-align: left;
}
.title-details .file-size::before {
  content: "(";
}
.title-details .file-size::after {
  content: ")";
}
.item-list {
  .history-list {
    list-style-type: disc;
    margin: 1em;

    span {
      margin-left: .25em;
    }

    .current-title {
      list-style-type: none;

      &::before {
        color: $checkmark;
        content: "\f00c";
        float: left;
        font-family: 'Font Awesome 5 Free';
        font-size: x-small;
        margin-left: -1.75em;
        margin-top: .25em;
      }
    }
  }
}

/* Helper classes */
.center-block img {
  margin-left: auto;
  margin-right: auto;
}
.font-weight-bold {
  font-weight: bold;
}
.no-borders,
.title-details .file>span {
  border: none;
}
.image-placeholder {
  max-height: 230px; /* same as Sample publication image style */
}
.no-gutters{
  margin-left: 0;
  margin-right: 0;
}
.no-wrap {
  white-space: nowrap;
}

/* Chosen + Bootstrap */
.select-wrapper .chosen-container {
  padding: 4px 2em 4px 12px;
  width: 100% !important;
}
.chosen-container .chosen-drop {
  border-color: #ccc;
  left: 0;
}
.chosen-container-active.chosen-with-drop .chosen-single {
  background: #fff;
  border: none;
}
.chosen-container-single .chosen-single {
  background: #fff;
  border: none;
  box-shadow: none;
  padding: 0;
}
.chosen-container-single .chosen-single div b {
  display: none;
}
.chosen-container-single .chosen-single span {
  margin-right: 5em;
}
.chosen-search-input {
  height: 32px!important;
}

/* Bootstrap overrides */
.page-header {
  border-bottom: none;
}
.text-muted {
  color: $text-muted;
}
/* Managed file form table */
.draggable .tabledrag-handle {
  float:left;
  margin: 0 0 0 -10px;
}
.draggable .form-managed-file {
  float: left;
  width: 90%;
}
.draggable .select-wrapper,
.draggable button {
  margin-bottom: 5px;
  margin-top: 5px;
}

/* Menu local action xs button override */
.local-actions a.btn-xs {
  border-radius: 4px;
  font-size: 14px;
  line-height: inherit;
  margin-bottom: .75em;
  padding: 6px 12px;
}

/* jQuery UI Bridge overrides */
.modal.in .modal-dialog {
  top: 25%;
}
.modal.in .modal-dialog .modal-content {
  padding: .2em;
}
.modal-dialog .modal-header {
  border: 1px solid #ddd;
  background: #e9e9e9;
}
.modal-dialog h4 {
  font-weight: bold;
}
.modal-dialog .close {
  background: #f6f6f6;
  border: 1px solid #454545;
  color: #454545;
  font-size: 24px;
  border-radius: 3px;
  padding: 1px 6px;
}

/* Search results */
.search-results .holding {
  color: $text-muted;
  display: inline;
  font-size: smaller;
}
.search-results tbody .views-field-field-sort-title span:first-of-type::before {
  content: 'Available: ';
  margin-left: .5em;
}
.search-results table a {
  display: block;
}

.search-results .views-row {
  margin-bottom: 1.5em;
}
.table > thead:first-child > tr:first-child > th {
  border-top: 2px solid #ddd;
}

.search-results time {
  white-space: nowrap;
}

.search-results thead > tr > th.views-field-issue-title {
  padding: .5em;
  white-space: nowrap;
}

/* Empty search no-results text hack */
.search-results .results- {
  display: none;
}
.search-results h2 {
  font-size: 1em;
}
.search-results h3 {
  font-size: 1.15em;
  margin-bottom: 0;
}
.search-results .excerpt {
  color: #545454;
}
.search-results strong {
  color: $unb-lib-panel-heading;
}
/* Override Search API Autocomplete */
.search-api-autocomplete-search .ui-menu-item:hover {
  background: inherit;
}
.ui-autocomplete a:focus,
.ui-autocomplete a:hover {
  text-decoration: none;
}

.search-results label {
  display: block;
}

/* Digital Issue List exposed Views filters */
.toggle-wrapper input {
  vertical-align: top;
}
.toggle-wrapper label:hover {
  color: $link-color-hover;
}

.toggle-wrapper input:hover {
  cursor: pointer;
}
.filters .form-group {
  max-width: 24.9%;
}
.filters label {
  display: block;
}
.filters button.form-submit {
  margin-top: 1.6em;
}

/* High Resolution Image back link */
a.back-results::before,
a.back-link::before {
  font-family: "Font Awesome 5 Free";
  content:"\f0d9";
  color: $text-muted;
  display: inline-block;
  font-weight: 900;
  margin-right: 0.25em;
  vertical-align: text-bottom;
}

/* Holdings */
.holding-type dt {
  border-bottom: 2px solid #e5e5e5;
  font-size: 18px;
  font-weight: normal;
  margin-bottom: .5em;
}
.holding-item dt {
  border-bottom: none;
  font-size: initial;
  font-weight: bold;
  margin-bottom: 0;
}
.holding-type dd {
  margin-bottom: 1.5em;
}
.holding-item dd {
  margin-bottom: .75em;
}
.holding-type dd dl:not(:first-child):before {
  content: "";
  background: #eee;
  position: absolute;
  left: 1.6em;
  right: 1.6em;
  height: 1px;
}
.holding-type dd dl:not(:first-child) dt {
  padding-top: 1em;
}

/* Front page */
.message {
  margin-bottom: 2.5em;
}
.path-frontpage .details h2 {
  font-size: large;
  margin-top: 0;
}

@media (max-width: 767px) {
  .no-gutters > aside {
    padding-left: 0;
  }
  .filters button.form-submit {
    margin-top: 0;
  }
  .filters .form-group {
    max-width: 35%;
  }
  .responsive-enabled>tbody>tr>td {
    overflow: paged-y;
    overflow: -webkit-paged-y;
  }
}
@media (max-width: 600px) {
  .image-placeholder {
    max-height: 120px;
  }
  .title-details img {
    max-width: 120px;
    max-height: 160px;
  }
  .tab-content {
    padding: 1.5em 2em 1em;
  }
}
@media (min-width: 768px)
and (max-width: 991px){
  .image-placeholder {
    max-width: 160px;
  }
  .title-details img {
    max-width: 120px;
    max-height: 160px;
  }
}
@media (min-width: 768px) {
  // Fix Bootstrap responsive table button dropdown menus
  .table-responsive {
    margin-bottom: 1em;
    overflow-x: visible;
  }
}

div.alert-dismissible {
  transition: all .3s ease-out;
}

